# trading_algos

./: .coverage  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  trail_my_trade.py
tests/: conftest.py  test_trail_my_trade.py
trading_algos/: __main__.py  config.py  trail_my_trade.py
trading_algos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trading_algos/core/: broker.py  logger.py  position.py
trading_algos/trailing/: base.py  volume_atr.py
